--- a/Web_development/Projects/Spotify Clone App/index.html
+++ b/Web_development/Projects/Spotify Clone App/index.html
@@ -31,6 +31,14 @@
         />
       </button>
     </section>
+    <section
+      id="player"
+      class="bg-zinc-500 w-full absolute bottom-0 left-0 rounded-lg"
+    >
+      <div id="infoSong"></div>
+      <div id="mediaControls"></div>
+      <div id="volumeControls"></div>
+    </section>
   </body>
 
   <script src="app.js"></script>
