--- a/Web_development/Projects/Spotify Clone App/index.html
+++ b/Web_development/Projects/Spotify Clone App/index.html
@@ -33,9 +33,15 @@
     </section>
     <section
       id="player"
-      class="bg-zinc-500 w-full absolute bottom-0 left-0 rounded-lg"
+      class="bg-zinc-600 w-full absolute bottom-0 left-0 rounded-lg px-10 py-5"
     >
-      <div id="infoSong"></div>
+      <div id="infoSong" class="flex gap-2">
+        <img src="assets/dummy.png" alt="" class="w-14 rounded" />
+        <div id="songInfo" class="text-white">
+          <h2>SongName</h2>
+          <h3>Artist Name</h3>
+        </div>
+      </div>
       <div id="mediaControls"></div>
       <div id="volumeControls"></div>
     </section>
