--- a/Web_development/Html,Css,Js/Images/index.html
+++ b/Web_development/Html,Css,Js/Images/index.html
@@ -10,5 +10,6 @@
     <img src="Pc.png" alt="" />
     <img src="Screenshot 2024-10-09 222926.png" alt="" />
     <img src="Screenshot 2024-10-09 223019.png" alt="" />
+    <img src="weather.png" alt="" />
   </body>
 </html>
